--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-    href="./assets/css/style.css" />
-    <title>WNS Dashboard</title>
-</head>
-<body>
-    <header>
-        <h1 class='title'>WNS Dashboard</h1>
-    </header>
-    <main>
-        <div>
-            <form id='search-form'>
-                <div>
-                    <label><h2>Search for a City:</h2></label>
-                    <input name='city' id='city-input' type='text' class='' placeholder='Washington, D.C.'/>
-                </div>
-                <button type='submit' class=''>Search</button>
-            </form>
-            <div id='results' class=''>Results will dislay here</div>
-        </div>
-    </main>
+    <link rel="stylesheet" href="./assets/css/intro.css" />
+    <title>WNS intro</title>
 
-    <script src =./assets/js/script.js></script>
+    <!-- Insert CSS framework  - Bulma -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+</head>
+
+<body>
+    <section>
+        <div class="has-text-centered">
+            <h1 class="title has-text-weight-bold animate__heartBeat">W N S</h1>
+            <p class="air-quality">Air Quality Application</p><br>
+
+            <a href="wns.html"><button class="button is-link is-rounded">Enter</button></a>
+        </div>
+    </section>
+
+    <script src=./assets/js/script.js></script>
 </body>
+
 </html>
